<resources>
    <string name="app_name" translatable="false">BlueBeats</string>
    <string name="main_tab_media">Media</string>
    <string name="main_tab_player">Player</string>
    <string name="player_fullscreen">Fullscreen</string>
    <string name="filebrowser_perm_needed">This App needs storage permissions to scan for media-files</string>
    <string name="player_chapters">Chapters</string>
    <string name="filebrowser_menu_fileinfo">File Info</string>
    <string name="tagname_title">Title</string>
    <string name="tagname_length">Length</string>
    <string name="tagname_artist">Artist</string>
    <string name="main_tab_playlists">Playlists</string>
    <string name="filebrowser_menu_add_playlist">Add to Playlist</string>
    <string name="misc_cancel">Cancel</string>
    <string name="misc_remove">Remove</string>
    <string name="tagname_filepath">Path</string>
    <string name="player_show_playlist">Current Playlist</string>
    <string name="dynpl_buffersize">Item-count before regeneration:</string>
    <string name="playlists_add_dyn">Create Dynamic Playlist</string>
    <string name="misc_ok">OK</string>
    <string name="dynpl_type_group">Rule Group</string>
    <string name="dynpl_type_include">Include-Rule</string>
    <string name="dynpl_type_exclude">Exclude-Rule</string>
    <string name="dynpl_edit_select_rule_type">Select Rule Type</string>
    <string name="misc_add">Add</string>
    <string name="dynpl_edit_deep_dir">Inc. Subdirs</string>
    <string name="dynpl_type_usertags">Usertags-Rule</string>
    <string name="misc_saved">Changes saved</string>
    <string name="dynpl_share_absolute">Absolute</string>
    <string name="dynpl_share_value">Value</string>
    <string name="playlist_edit_dyn">Edit Dynamic Playlist</string>
    <string name="dynpl_edit_save_unsuccessful">Changes could not be saved</string>
    <string name="dynpl_edit_name_saved">Name saved</string>
    <string name="dynpl_edit_name_not_saved">Name could not be saved (it is likely that the name already exists)</string>
    <string name="dynpl_edit_name_invalid_blank">The name must not be empty</string>
    <string name="dynpl_edit_rules_not_100">relative shares do not add up to 100%</string>
    <string name="dynpl_edit_mnu_reset">Undo Changes</string>
    <string name="tagname_genre">Genre</string>
    <string name="dynpl_type_id3tag">ID3 Tag</string>
    <string name="dynpl_edit_tag_type">Tag Type:</string>
    <string name="dynpl_share_unlimited">Unlimited</string>
    <string name="dynpl_share_relative">Relative</string>
    <string name="dynpl_share_even">Even</string>
    <string name="main_tab_search">Search</string>
    <string name="search_cat_filename">Filename</string>
    <string name="search_cat_title">Title</string>
    <string name="search_cat_id3">ID3 Tag</string>
    <string name="search_cat_usertag">User-Tags</string>
    <string name="search_mnu_expand_all">Expand all</string>
    <string name="search_mnu_collapse_all">Collapse all</string>
    <string name="search_cat_type">Type</string>
    <string name="misc_filetype_audio">Audio</string>
    <string name="misc_filetype_video">Video</string>
    <string name="misc_filetype_other">other</string>
    <string name="misc_loading">loading &#8230;</string>
    <string name="filebrowser_menu_select_all_files">Select All Files</string>
    <string name="dynpl_regex_attr">Attribute</string>
    <string name="dynpl_regex_regex">Regex Pattern</string>
    <string name="dynpl_regex_title">Regex</string>
    <string name="dynpl_regex_regex_invalid">invalid Regex</string>
    <string name="crash_dlg_message">The application crashed. Do you want to send a report?</string>
    <string name="crash_dlg_title">Application Crash</string>
    <string name="misc_yes">Yes</string>
    <string name="misc_no">No</string>
    <string name="dynpl_type_timespan">TimeSpan-Rule</string>
    <string name="misc_path">Path</string>
    <string name="dynpl_timespan_start">Start (s):</string>
    <string name="dynpl_timespan_end">End (s):</string>
    <string name="misc_description">Description</string>
    <string name="player_vlc_err">An error occurred in the player</string>
    <string name="filebrowser_menu_start_tmp_pl">Play now</string>
    <string name="filebrowser_menu_add_tmp_pl">Add to running Playlist</string>
    <string name="filebrowser_dir_no_media">Directory does not contain any mediafiles</string>
</resources>